--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,61 @@
-.App {
+.TodoHead{
   text-align: center;
 }
 
+.Button{
+  padding-top: 0px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-left: 950px;
+}
+
+.Button1{
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin:50px 2px;
+  cursor: pointer;
+  margin-top: 50px;
+  margin-left: 0px;
+  align-self: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.AddTodo{
+  text-align: center;
+}
+
+.TodoItem{
+  color: white;
+  border-left: 6px solid rgb(46, 153, 214);
+  border-radius: 25px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 50px;
+  margin-left: 200px;
+  background-color: #222222;
+  padding-top: 30px;
+  padding-right: 100px;
+  padding-bottom: 30px;
+  padding-left: 0px;
+  flex-basis: 400px;
+  align-self: center;
+}
+
 .App-logo {
+  text-align: center;
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
 .App-header {
+  text-align: center;
   background-color: #222;
   height: 150px;
   padding: 20px;
@@ -15,14 +63,49 @@
 }
 
 .App-title {
+  text-align: center;
   font-size: 1.5em;
 }
 
 .App-intro {
+  text-align: center;
   font-size: large;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Input[type=text], select {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.Input[type=submit] {
+  width: 40%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.Div{
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding:20px;
+}
+
+.Flex{
+  display: flex;
+  justify-content: center;
+  height: 100px;
 }
